--- a/avl-visualizer/frontend/package.json
+++ b/avl-visualizer/frontend/package.json
@@ -9,10 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "framer-motion": "^12.19.1",
+    "framer-motion": "^12.19.2",
     "next": "15.3.4",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-zoom-pan-pinch": "^3.7.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
